finished project, but to prevent overflow of moves, i sliced it to 20

--- a/pokedex.css
+++ b/pokedex.css
@@ -33,6 +33,8 @@ h1 {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    font-family: 'Inter';
+    font-weight: 400;
     width: 360px;
     height: 67px;
     border-radius: 10px;
@@ -48,7 +50,7 @@ h1 {
     gap: 5px;
     flex-direction: column;
     font-family: 'Inter';
-    font-weight: bold;
+    font-weight: 400;
     width: 100px;
     height: 70px;
     border-radius: 10px;
@@ -91,17 +93,17 @@ h1 {
 }
 
 
-#rightSide {
+#rightside {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    transform: translateY(-1000px);
 
 }
 
 #infoInterface {
     display: flex;
     flex-direction: column;
+    font-family: 'Inter';
     justify-content: space-between;
     align-items: center;
     font-family: 'Inter', sans-serif;
@@ -113,17 +115,21 @@ h1 {
     font-size: 2em;
     text-align: center;
     transform: translateY(40px);
+    font-weight: bold;
 }
 
 #details{
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    flex-wrap: wrap;
+    gap: 8px;
     font-family: 'Inter';
-    font-size: 36px;
+    font-weight: 400;
+    font-size: 25px;
     background-color: #E8E8E8;
     width: 400px;
     height: 465px;
+    padding: 35px 30px;
 }
 
 #infobuttons{
@@ -131,6 +137,8 @@ h1 {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    font-family: 'Inter';
+    font-weight: 400;
     gap: 80px;
 }
 
